# fast_segmentation

./: README.md
conversions/: .gitignore  CMakeLists.txt
conversions/scripts/: convert_pb_to_uff.py  convert_plan.py  convert_to_pb.py
conversions/src/: CMakeLists.txt  uff_to_plan.cpp
conversions/src/test/: test_trt.cu
inference/: CMakeLists.txt  nodelet_plugins.xml  package.xml
inference/include/: common.h  infNode.h  infNodeCPU.h  infNodelet.h  infNodeletCPU.h  inferenceEngine.h  inferenceEngineCPU.h  locNodelet.h  matching.h  segNode.h  segNodeCPU.h  segNodelet.h  segNodeletCPU.h  trellis.h
inference/launch/: CMakeList.txt  inference.launch  inferenceCPU.launch  package.xml
inference/scripts/: run.py  run2.py  trt_run.py
inference/src/: infNode.cpp  infNodeCPU.cpp  infNodelet.cpp  infNodeletCPU.cpp  inferenceEngine.cu  inferenceEngineCPU.cpp  locNode.cpp  locNodelet.cpp  matching.cpp  run_plan.cu  segNode.cpp  segNodeCPU.cpp  segNodelet.cpp  segNodeletCPU.cpp  test_inf.cpp  test_inf.cu  trellis.cpp  viz_tools.cpp
