<?xml version="1.0"?>
<package format="2">
  <name>trt_inference</name>
  <version>0.0.1</version>
  <description>The inference package</description>

  <maintainer email="guinardari@usp.br">Gui</maintainer>
  <maintainer email="yvarcot@seas.upenn.edu">Vaibhav</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend version_gte="3.1.0">tensorflow_ros_cpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
